tests/sksl/errors/Ossfuzz27650.glsl
### Compilation failed:

error: 1: expected 'int', but found 'float'
void main() { int i=9E7; 2+int4(i); }
                    ^^^
error: 1: unknown identifier 'i'
void main() { int i=9E7; 2+int4(i); }
                                ^
2 errors
